# yirang-message-queue

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
CommonLibrary/: CMakeLists.txt
CommonLibrary/DataBase/: CMakeLists.txt  SQLite.cpp  SQLite.h
MainMQ/: CMakeLists.txt  Configurations.cpp  MailboxHandler.cpp  MailboxTypes.h  QueueManager.cpp  QueueManager.h  main_mq_configuration.json  sqlite_schema.sql
MainMQ/BackendAdapter/: BackendAdapter.h  CMakeLists.txt  FileSystemAdapter.cpp  FileSystemAdapter.h  HybridAdapter.cpp  HybridAdapter.h  SQLiteAdapter.cpp  SQLiteAdapter.h  sqlite_schema.sql
Samples/: CMakeLists.txt
Samples/MQCLI/: CMakeLists.txt  README.md  main.cpp
Samples/yirangmq/: CMakeLists.txt  main.cpp
Samples/yirangmq-cli-consumer/: CMakeLists.txt  Configurations.cpp  main.cpp
Samples/yirangmq-cli-publisher/: CMakeLists.txt  Configurations.cpp  main.cpp
Tests/: CMakeLists.txt  TestConfigurations.cpp  TestFileSystemAdapter.cpp  TestHelpers.h  TestHybridAdapter.cpp  TestMailboxHandler.cpp  TestMessageValidator.cpp  TestQueueManager.cpp  TestSQLiteAdapter.cpp
docker/: .dockerignore  Dockerfile  docker-compose.sh  docker-compose.yml
